Analis univariado y multivariado

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,6 @@ Desktop.ini
 
 df_revision_valores_faltantes.csv
 df_light.csv
-df_light.csv
-df_light.csv
-df_light.csv
+apresentacoes.csv
+df_via_administracion.csv
+formas_farmaceuticas.csv
